# superfan-core

./: .gitignore  BRANCH_STRATEGY.md  IMPLEMENTATION_PLAN.md  MVP_IMPLEMENTATION_PLAN.md  README.md  REFACTOR PLAN.md  TIER_REWARDS_DEPLOYMENT_SUMMARY.md  TIER_REWARDS_MIGRATION_INSTRUCTIONS.md  UNIFIED_ECONOMY_PLAN.md  debug_admin_points.sql  middleware.ts  minikit.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  superfan-core-memo.md  tailwind.config.ts  test-club-memberships.sql
.cursor/: agents.json
__tests__/: campaigns-mvp.test.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: ManagerBetaWarning.tsx  UserAgreementWarning.tsx  billfold-wallet.tsx  campaign-progress-card.tsx  club-card.tsx  club-details-modal.tsx  club-media-display.tsx  club-media-manager.tsx  empty-state.tsx  farcaster-share.tsx  financing-form.tsx  fund-modal.tsx  header.tsx  launch-form.tsx  logo.tsx  perk-details-modal.tsx  perk-redemption-confirmation.tsx  points-wallet-widget.tsx  presale-banner.tsx  profile-settings.tsx  project-card.tsx  project-details-modal.tsx  project-list-item.tsx  qr-generator.tsx  qr-scanner.tsx  review-project.tsx  rewards-display.tsx  route-guard.tsx  scanner-wallet-toggle.tsx  status-progression-card.tsx  team-splits-form.tsx  theme-provider.tsx  ticket-balance.tsx  (+3 more)
solana-adapter/programs/label-subdao/: Cargo.toml
solana-adapter/programs/label-subdao/src/: lib.rs
solana-adapter/programs/superfan-dao/: Cargo.toml
solana-adapter/programs/superfan-dao/src/: lib.rs
solana-adapter/programs/superfan-presale/: Cargo.toml
solana-adapter/programs/superfan-presale/src/: lib.rs
(+266 files in other folders)
