[package]
name = "label-subdao"
version = "0.1.0"
description = "Label SubDAO - Manages artist proposals and credit lines for Superfan labels"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "label_subdao"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

