[package]
name = "superfan-presale"
version = "0.1.0"
description = "Superfan presale program - Solana adapter for tokenized campaign presales"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "superfan_presale"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

